fix: fix horizontal scroll < 1440px

--- a/assets/media.css
+++ b/assets/media.css
@@ -110,6 +110,10 @@
     max-width: 445px;
   }
 
+  .video {
+    padding: 100px 0 0;
+  }
+
   .video__content {
     padding-top: 70px;
   }
